Refactored portion of js code

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Data Manipulation</title>
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <h6>Javascript Data Manipulation</h6>
+    <h1>Javascript Data Manipulation</h1>
+
+    
 </body>
 </html>
