Refactored .js file with template literals

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Data Manipulation</title>
-    <script defer src="script.js"></script>
+    <script defer src="../Javascript/script.js"></script>
 </head>
 <body>
     <h1>Javascript Data Manipulation</h1>
